Expose estimated duration on case search response (API v1)
