# swagger/v1/hearing_summary.json
@@ -27,6 +27,12 @@
       "description": "A description of the hearing type",
       "type": "string"
     },
+    "estimated_duration": {
+      "readOnly": true,
+      "example": "20",
+      "description": "Estimated duration of the hearing",
+      "type": "string"
+    },
     "court_centre": {
       "readOnly": true,
       "description": "An object representing court centre details",
@@ -75,6 +81,9 @@
         "hearing_type": {
           "$ref": "#/definitions/hearing_type"
         },
+        "estimated_duration": {
+          "$ref": "#/definitions/estimated_duration"
+        },
         "hearing_days": {
           "$ref": "#/definitions/hearing_days"
         },
@@ -99,6 +108,9 @@
   "properties": {
     "hearing_type": {
       "$ref": "#/definitions/hearing_type"
+    },
+    "estimated_duration": {
+      "$ref": "#/definitions/estimated_duration"
     },
     "hearing_days": {
       "$ref": "#/definitions/hearing_days"
